--- a/t02-www/eclipse-project/WebContent/misc1.html
+++ b/t02-www/eclipse-project/WebContent/misc1.html
@@ -15,7 +15,7 @@
 
     <section><h3 id="audio">Audio</h3>
       <audio controls="1">
-        <source src="humor/olivetti.mp3" type="audio/mp3"/>
+        <source src="humor/olivetti.mp3" type="audio/mpeg"/>
         Navegador no soporta &lt;audio&gt;
       </audio>
       <br/>
