--- a/t02-www/eclipse-project/WebContent/trivial1.html
+++ b/t02-www/eclipse-project/WebContent/trivial1.html
@@ -6,22 +6,21 @@
 </head>
 <body>
 <!-- Esto es un ejemplo de documento sencillo, jugando con líneas y entidades -->
-<p>
+<img src="./humor/crazy-cat-lady.jpg" width="200" height="200" alt="La &apos;princesa&apos;" align="left" title="La loca de los gatos (Matt Groening, Los Simpson)"/>
+<blockquote><p>
 La princesa est&aacute; triste...<br/>
 &iquest;Qu&#xe9; tendr&aacute; la princesa?<br/>
 Los suspiros escapan de su boca de fresa.<br/>
 </p>
 <p>
-Que ha perdido la risa, que ha perdido el color<br>
+Que ha perdido la risa, que ha perdido el color<br/>
 &hellip;
-
-</p>
-
-<p>
+</p></blockquote><cite><a href="http://www.poesi.as/index604.htm">Rubén Darío. Prosas Profanas y otras poesías</a></cite>
 
 <hr />
 
-<p>Divide and Conquer &larr; <i><b>Divide</b> ut regnes</i> (J.César)
+<p>
+  <q>Divide and Conquer</q> &larr; <q cite="Cayo Julio César">Divide ut regnes</q>
 </p>
 </body>
 </html>
