--- a/t02-www/eclipse-project/WebContent/trivial1.html
+++ b/t02-www/eclipse-project/WebContent/trivial1.html
@@ -15,7 +15,9 @@ Los suspiros escapan de su boca de fresa.<br/>
 <p>
 Que ha perdido la risa, que ha perdido el color<br/>
 &hellip;
-</p></blockquote><cite><a href="http://www.poesi.as/index604.htm">Rubén Darío. Prosas Profanas y otras poesías</a></cite>
+</p></blockquote><cite>
+	<a href="http://www.poesi.as/index604.htm">Rubén Darío. Prosas Profanas y otras poesías</a>
+</cite>
 
 <hr />
 
