--- a/t02-www/victor/web/formulario.htm
+++ b/t02-www/victor/web/formulario.htm
@@ -8,26 +8,26 @@
 </head>
 <body>
 <div id="contenedor">
-<div id="cabecera">
+<header id="cabecera">
     <h1>Bienvenidos a mi p&aacute;gina web</h1>
     <h2>Me interesa tu opini&oacute;n</h2>
-</div>
+</header>
 
-<div id="menu">
+<nav id="menu">
     <ul>
         <li><a href="index.htm" title="para conocerme">Presentaci&oacute;n</a></li>
         <li><a href="galeria.htm" title="unas fotos chulas">Galer&iacute;a de fotos</a></li>
         <li><a href="formulario.htm" title="opina sobre mi web">Formulario</a></li>
     </ul>
-</div>
+</nav>
 
-<div id="contenido">
+<section id="contenido">
 Opina en el formulario
-</div>
+</section>
 
-<div id="pie">
+<footer id="pie">
 Creado por VMS con el notepad (ya ves qu&eacute cutres somos...)
-</div>
+</footer>
 </div>
 </body>
 </html>
