--- a/t02-www/victor/web/galeria.htm
+++ b/t02-www/victor/web/galeria.htm
@@ -7,27 +7,27 @@
 <link href="estilo2.css" rel="stylesheet" type="text/css" media="print" />
 </head>
 <body>
-<div id="contenedor">
-<div id="cabecera">
-    <h1>Bienvenidos a mi p&aacute;gina web</h1>
-    <h2>Algunas fotos chulas</h2>
-</div>
+  <div id="contenedor">
+    <header id="cabecera">
+      <h1>Bienvenidos a mi p&aacute;gina web</h1>
+      <h2>Algunas fotos chulas</h2>
+    </header>
 
-<div id="menu">
-    <ul>
+    <nav id="menu">
+      <ul>
         <li><a href="index.htm" title="para conocerme">Presentaci&oacute;n</a></li>
         <li><a href="galeria.htm" title="unas fotos chulas">Galer&iacute;a de fotos</a></li>
         <li><a href="formulario.htm" title="opina sobre mi web">Formulario</a></li>
-    </ul>
-</div>
+      </ul>
+    </nav>
 
-<div id="contenido">
-Mi galer&iacute;a de fotos...
-</div>
+    <section id="contenido">
+      Mi galer&iacute;a de fotos...
+    </section>
 
-<div id="pie">
-Creado por VMS con el notepad (ya ves qu&eacute cutres somos...)
-</div>
-</div>
+    <footer id="pie">
+      Creado por VMS con el notepad (ya ves qu&eacute cutres somos...)
+    </footer>
+  </div>
 </body>
 </html>
