--- a/t02-www/eclipse-project/WebContent/ejemplo-site/galeria.htm
+++ b/t02-www/eclipse-project/WebContent/ejemplo-site/galeria.htm
@@ -33,8 +33,9 @@
 		<p>Esta imagen tiene un fondo transparente,
 		  de modo que si hay un fondo de pantalla (un color, una imagen, otro contenido solapado),
 		  será visible a través de la parte de imágen marcada como transparente
-		  (en aquellos formatos como .gif o como .jpg que lo permiten).
-		  Algunas imágenes pueden definir un canal <strong>alpha</strong> que designa la opacidad(100%) o transparencia (0%) de los píxeles. Puede ser útil para elementos traslúcidos (como una nube), o para los bordes de un cuerpo sólido (habría píxeles en la frontera parte dentro y parte fuera)
+		  (en aquellos formatos como .gif o como .png que lo permiten).
+		  Algunas imágenes pueden definir un canal <strong>alpha</strong> que designa 
+		  el nivel de opacidad(100%) o transparencia (0%) de los píxeles. Puede ser útil para elementos traslúcidos (como una nube), o para los bordes de un cuerpo sólido (habría píxeles en la frontera parte dentro y parte fuera)
 		</p>
       </section>
       <section id="foto-filosofos">
@@ -79,7 +80,7 @@
 		    <li>Si la imagen tiene unas dimensiones distintas, servirá para redimensionarla.</li>
 		    <li>Existen los atributos width y height, y también se puede especificar con CSS (más opciones). </li>
 		  </ul></li>
-		  <li>Las imágenes de elevado tamaño (por ejemplo mayores de 100KB), deberían reducirse (dimensiones y calidad) e incluso cambiar de formato.
+		  <li>Las imágenes de elevado tamaño (por ejemplo mayores de 100&nbsp;KB), deberían reducirse (dimensiones y calidad) e incluso cambiar de formato.
 		  No todo el mundo accede a Internet con banda ancha y el tamaño es dinero (ver <a href="https://danluu.com/web-bloat/">danluu - How web bloat affects people with slow connections</a> ).
 		  <li>Cuidado con los nombres. Poner todo en minúsculas nos evitará sorpresas al subir los ficheros a un servidor 'case-sensitive'. Unificar los separadores internos en el nombre(espacios, etc) a guiones ('-'). Evitar caracteres no ASCII.</li> 
 		  <li>El atributo alt es un texto a mostrar si no es posible visualizar la imagen (por error de carga, o navegando en modo texto).
@@ -87,6 +88,14 @@
 		   como una capa de información adicional sobre la imagen que se visualiza al pasear el ratón sobre ésta. </li> 
 		</ul>
 	  </section>
+	  Más información:
+	  <ul>
+	   <li><a href="https://www.w3schools.com/html/html_images.asp">W3CSchools HTML Images</a></li>
+	   <!-- (sección del W3C más larga que un día sin pan) 
+	   <li><a href="https://www.w3.org/TR/html5/semantics-embedded-content.html#the-img-element">W3C HTML5 Rec. : The img element</a></li>
+	   -->
+	   
+	  </ul>
     </section> <!-- content -->
 
 	<footer>
